# CQViewer

./: .gitignore  CLAUDE.md  README.md  pack.sh  pyproject.toml  requirements-company.txt  run_cli.py  run_cqviewer.bat  run_cqviewer.sh  run_cqviewer_gui.bat  run_cqviewer_gui.sh  run_ui.py
src/cqviewer/: __init__.py  cli.py
src/cqviewer/models/: __init__.py  field.py  message.py  queue_info.py
src/cqviewer/parser/: __init__.py  cq4_reader.py  java_parser.py  sbe_decoder.py  schema.py  stop_bit.py  thrift_decoder.py  wire_reader.py  wire_types.py
src/cqviewer/services/: __init__.py  export_service.py  filter_service.py  message_service.py  search_service.py
src/cqviewer/ui/: __init__.py  app.py
src/cqviewer/ui/screens/: __init__.py
src/cqviewer/ui/widgets/: __init__.py  detail_panel.py  export_dialog.py  filter_bar.py  message_table.py
tests/: __init__.py  test_cq4_reader.py  test_java_parser.py  test_message_service.py  test_models.py  test_schema.py  test_services.py  test_stop_bit.py  test_wire_reader.py  test_wire_types.py
