[project]
name = "cqviewer"
version = "0.1.0"
description = "A Python tool for inspecting and exporting Chronicle Queue (.cq4) data"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Chan Chun Yin Johnny" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = [
    "streamlit>=1.30",
    "pandas>=2.1",
]
cli = [
    "rich",
    "tabulate",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cqviewer = "cqviewer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
